<resources>
    <string name="app_name">TriagingApp</string>
    <string name="title_home">Home</string>
    <string name="about">About</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="power_on">POWER ON</string>
    <string name="step1_on">Look for DNA on the Device</string>
    <string name="step2_on">Check for Security</string>
    <string name="step3_on">Identify What You Have</string>
    <string name="step4_on">Isolate the Network</string>
    <string name="step5_on">Signal Blocking Mesh or Bags</string>
    <string name="step6_on">Obtain Legal Process</string>
    <string name="step7_on">Perform Extraction</string>
    <string name="step8_on">Validate Findings</string>
    <string name="step9_on">Report</string>
    <string name="summary_on">Summary Power On</string>
    <string name="power_off">POWER OFF</string>
    <string name="step1_off">Look for DNA on the Device</string>
    <string name="step2_off">Identify What You Have</string>
    <string name="step3_off">Obtain Legal Process</string>
    <string name="step4_off">Remove Media and SIM </string>
    <string name="step5_off">Charge the Battery</string>
    <string name="step6_off">Consider Forensic SIM</string>
    <string name="step7_off">Perform Extraction</string>
    <string name="step8_off">Validate Findings</string>
    <string name="step9_off">Report</string>
    <string name="introduction">
        This app allows police officers to collect evidence and also to ensure that the evidence is
        not destroyed or altered. At this point, the collection is the only thing going on - not the
        actual search. </string>
    <string name="title"> Mobile Triage Guide</string>
    <string name="intro">Sponsor by Detective</string>
    <string name="home">Home</string>
    <string name="status">Device Status</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="start">Start</string>
    <string name="warning1">
    <![CDATA[<i><font color=#ff0000>Always consult legal advisor or supervisor with forensic background before proceeding.
</i>]]></string>
    <string name="warning2">
    <![CDATA[<i><font color=#ff0000>Please choose Your Device Status!
</i>]]></string>
    <string name="warning3">
    <![CDATA[<i><font color=#ff0000>Please Choose Your Option!
</i>]]></string>
    <string name="warn_message">
    <![CDATA[<font color=#ff0000>WARNING!!!

    ]]></string>
    <string name="warn_message4">
    <![CDATA[<i><font color=#ff0000>Proceeding further is intended for forensic personnel or consult
        your supervisor for further directions.!!!
   </i> ]]></string>
    <string name="warn_message5">
    <![CDATA[<i><font color=#ff0000>  If situation is exigent (i.e. missing child, recent murder,
    etc.) consult your supervisor for which items may be needed
    first such as call history details, messages, etc..!!!
   </i> ]]></string>
    <string name="content1_step1_on">Does the device has any visible DNA that needs to be swabbed such as blood, fingerprints, etc?</string>
    <string name="content2_step1_on">
    <![CDATA[<i><font color=#ff0000>Swab and collect DNA before proceeding with anything else.
    </i>
    ]]></string>
    <string name="content3_step1_on">
    <![CDATA[<i><font color=#ff0000>Once completed, move on to step 2.
</i>
    ]]></string>
    <string name="content1_step2_on">Does the device have user enabled security such as pin, a gesture, or a passcode?</string>
    <string name="content2_step2_on">Power off the device and collect it for further examination by trained investigator</string>
    <string name="content3_step2_on">
    <![CDATA[<i><font color=#ff0000>Proceeding further is intended for forensic personnel or contact your supervisor for further directions,
    IF SITUATION IS EXIGENT THEN IMMEDIATELY CONTACT SUPERVISOR.
    </i> ]]></string>
    <string name="content4_step2_on">If possible, enable airplane mode internally before powering off.</string>
    <string name="content5_step2_on">Remove backing and pull the battery.</string>
    <string name="content6_step2_on">Hold screen lock button until power off option is displayed.</string>
    <string name="content7_step2_on">If device cannot be powered down, pull SIM.</string>
    <string name="content1_step3_on">Determine the make and model of the phone. Phone make and model can be found on a few areas:</string>
    <string name="content2_step3_on">On the device, look for the make (iPhone, Samsung, etc) which is usually in bigger font, and the word “model” to find the model.
</string>
    <string name="content3_step3_on">If model is not visible from the outside, wait until a search warrant is obtained to pull the battery and search the inside.
</string>
    <string name="content4_step3_on">If the situation is not exigent, obtain pictures of the device for reference.
</string>
    <string name="content1_step4_on">Press home button located at the bottom of the screen once to open the lock screen
    </string>
    <string name="content2_step4_on">While screen is on, swipe finger from the bottom of the screen to the top to open the device’s Control Panel.
</string>
    <string name="content3_step4_on">Then tap the airplane shaped icon to enable Airplane Mode.
</string>
    <string name="content4_step4_on">Press home button located at the right of the screen until options are given.
</string>
    <string name="content5_step4_on">Then select “Power off” or “Airplane mode” depending on what your supervisor instructs you to do.
</string>
    <string name="content6_step4_on">Is the screen not accessible of is damaged?</string>
    <string name="content7_step4_on">Select Operating System</string>
    <string name="content8_step4_on"><![CDATA[<i><font color=#ff0000>Different OS’s may require
    different steps to achieve the same results as Android so modify steps accordingly or contact
    your supervisor for further directions.
    </i> ]]></string>
    <string name="content9_step4_on">Note: If the screen is not accessible of is damaged, Please proceed to next step</string>
    <string name="content10_step4_on"><![CDATA[<b><font color=#000000>If Android has 7.0+ security patch, follow directions below.
    </b> ]]></string>
    <string name="content11_step4_on">Put device into “Download Mode” by holding Power button and selecting “Restart” twice.
</string>
    <string name="content12_step4_on">After selecting “restart” the second time, quickly hold down
        the Volume Down + Home Button + Power Button at the same time until the phone begins to
        reboot and hold until the screen shows the “Custom OS” screen.</string>
    <string name="content13_step4_on">Select “Continue” using the Volume Buttons
</string>
    <string name="content14_step4_on">Once the next screen (Download Mode) appears, quickly press
        the Volume Down + Home + Power Buttons again until “Maintenance Boot Mode” screen appears.
</string>
    <string name="content15_step4_on">Navigate using the Volume Buttons to previous step and then select using the Home Button</string>
    <string name="content16_step4_on">If this technique cannot be applied, get the device into any
        diagnostic mode (Download, Android Recovery, Maintenance, etc) and allow the phone to die
        just so that the network can be isolated.
</string>
    <string name="description_image_1">This is an example</string>
    <string-array name="OS_arrays">
        <item>Choose Device OS</item>
        <item>iPhone/iOS</item>
        <item>Android OS</item>


    </string-array>
    <string name="content1_step5_on">If internal settings are not accessible or cannot be used,
        wrap device in faraday mesh or bags to isolate network.
</string>
    <string name="content2_step5_on">
If faraday mesh/bags cannot be obtained, then wrap the device in a minimum of 3 layers of aluminum
        foil or place device in an empty paint can with the lid closed to complete faraday.
</string>
    <string name="content3_step5_on">
Make sure to test these methods out before implementing on live scenes to ensure its effectiveness.
</string>
    <string name="content4_step5_on">
Combining methods is also encouraged to increase effectiveness.
</string>
    <string name="content3_step8_on">Use the GUI (Visual)</string>
    <string name="content4_step8_on">Obtain a Call Detail Records (CDR)</string>
    <string name="content5_step8_on"> Cross Validate</string>
    <string name="content6_step8_on">Hand Carve</string>
    <string name="content1_step5_off">
        If battery is removable, use a universal “probe” style charger and charge battery outside the phone.
    </string>
    <string name="content2_step5_off">
    If battery is not removable or does not charge with universal charger, take caution when charging through the charging port of the phone.
    </string>
    <string name="content3_step5_off">
    Charge through wall charger and NEVER charge through a USB computer port to prevent the phone from syncing to the computer and altering the contents.
    </string>
    <string name="content4_step5_off">
    Also provide a means of faraday in case the device powers on.
    </string>
    <string name="content1_step8_off">
    Anything that is extracted off the device MUST be validated through secondary means because evidence such as
    text messages can be “spoofed” and many examiners fail to perform this step. Suggestions for validation:
    </string>
    <string name="content2_step8_off">
    Use the GUI (Visual):\n
    You connect your phone via USB cable to tool “A”. Tool “A” obtains 250 call history entries,
    687 text messages, and 32 images. Using the phone’s Graphical User Interface (GUI), you visually validate these entries.
    Visual validation is easy and only costs the examiner their time. \n
    </string>
    <string name="content3_step8_off">
    Obtain a Call Detail Records (CDR):\n
    If the phone utilized normal cell phone towers to communicate, obtain the CDR.
    Many cases have argued specific dates and times off the phone as invalid only to be confirmed through the CDR results.
    This can also help with confirming or denying the content of SMS. Although most carries do not retain the actual text content,
    they will retain the deliver results - meaning “to” and “from” numbers with a code showing it was SMS.
    CDR results are part of the forensic process and recommended when data is recovered that used towers to connect and terminate. \n
    </string>
    <string name="content4_step8_off">
    Cross Validate:\n
    If you have the ability to utilize two or more different tools to obtain the data, this can confirm each of the product results.
    This in combination with visual validation can certainly ensure that the tools are getting what you can see.
    Using product “A” to confirm product “B” cross validates both. \n
    </string>
    <string name="content5_step8_off">
    Hand Carve:\n
    Manually locating artifacts may or may not always be an option.
    If you have the training, time, and tools, you can use this method to confirm what a tool or utility was able to acquire through the automated process.
    If you have the ability to obtain the file system, you will often be able to use free utilities to manually locate times, date, and content.
    By doing this, you will be able to articulate in court that you manually located the same artifact that tool “A” was able to pull.
    Hand-carving is also used to locate artifacts missed by tools and explored in greater detail in level II and III.
    </string>
</resources>