<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/step8_off"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context="rocket.team.seniorproject.StepEightOffFragment">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:orientation="vertical"
            android:paddingBottom="16dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/step8_off"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/stepSize" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/content1_step8_off"
                android:textColor="#000000"
                android:textSize="@dimen/textSize" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/content2_step8_off"
                    android:textColor="#000000"
                    android:textSize="@dimen/subSize"
                    android:textStyle="italic" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/content3_step8_off"
                    android:textColor="#000000"
                    android:textSize="@dimen/subSize"
                    android:textStyle="italic" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/content4_step8_off"
                    android:textColor="#000000"
                    android:textSize="@dimen/subSize"
                    android:textStyle="italic" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/content5_step8_off"
                    android:textColor="#000000"
                    android:textSize="@dimen/subSize"
                    android:textStyle="italic" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/nextStep8Off"
                    android:layout_width="40dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:background="@drawable/next"
                    android:text="@string/start"
                    android:textColor="@color/colorPrimary"></ImageButton>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Next"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/textSize"
                    android:textStyle="italic" />

            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</FrameLayout>
