<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/step5_off"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="rocket.team.seniorproject.StepFiveOffFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="top"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/step5_off"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/stepSize" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/content1_step5_off"
            android:textColor="#000000"
            android:textSize="@dimen/textSize" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:src="@drawable/check" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/content2_step5_off"
                android:textColor="#000000"
                android:textSize="@dimen/subSize"
                android:textStyle="italic" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:src="@drawable/check" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/content3_step5_off"
                android:textColor="#000000"
                android:textSize="@dimen/subSize"
                android:textStyle="italic" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:src="@drawable/check" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/content4_step5_off"
                android:textColor="#000000"
                android:textSize="@dimen/subSize"
                android:textStyle="italic" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/nextStep5Off"
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:background="@drawable/next"
                android:text="@string/start"
                android:textColor="@color/colorPrimary"></ImageButton>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Next"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/textSize"
                android:textStyle="italic" />

        </LinearLayout>


    </LinearLayout>
</FrameLayout>
