<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/home"
    tools:context="rocket.team.seniorproject.HomeFragment">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">


        <LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:id="@+id/main"
            tools:context="com.teamrocket.triagingapp.MainActivity"
            >


            <TextView
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:text="Tacoma Police Department"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="24dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:text="@string/title"
                android:textColor="#e9a810"
                android:textAlignment="center"
                android:layout_marginBottom="10dp"

                android:textSize="16dp" />

            <ImageView
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="@drawable/background"
                />
            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />


            <TextView
                android:id="@+id/introduction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="#000000"
                android:text="@string/introduction" />
            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/status"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="bold" />
            <RadioGroup
                android:id="@+id/group_button"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/onButton"
                    android:layout_width="match_parent"
                    android:textSize="@dimen/stepSize"
                    android:textColor="@color/colorAccent"
                    android:layout_height="wrap_content"
                    android:theme="@style/MyRadioButton"
                    android:text="@string/on"
                    />
                <RadioButton
                    android:id="@+id/offButton"
                    android:textColor="@color/colorAccent"
                    android:layout_width="match_parent"
                    android:textSize="@dimen/stepSize"
                    android:theme="@style/MyRadioButton"
                    android:layout_height="wrap_content"
                    android:text="@string/off"
                    />
            </RadioGroup>
            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />
            <Button
                android:id="@+id/startButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/getstarted"
                android:text="@string/start"
                android:textColor="#ed0a0a"
                android:layout_marginBottom="80dp"></Button>

        </LinearLayout>

    </ScrollView>

</FrameLayout>
